# datadog-agent

./: .atom-build.json  .bash_history  .bazelified.go.work  .bazelignore  .bazeliskrc  .bazelrc  .buildifier.json  .ci-linters.yml  .ci-needs-rules-allowlist.yml  .clang-format  .clang-tidy  .codecov.yml  .copyright-overrides.yml  .curlrc  .cursorignore  .custom-gcl.yml  .datadog-remediation  .dockerignore  .dynamic-build.yml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci-agent.yml  .gitlab-ci-cluster-agent.yml  .gitlab-ci-main.yml  .gitlab-ci-old.yml  .gitlab-ci.yml  .gitmodules  .global-ci.yml  .go-version  .golangci.yml  .linkcheckerrc  .lychee.toml  .markdown-link-check  .mcp.json  .mockery.yaml  .pre-commit-config.yaml  .protoc-version  .python-version  (+315 more)
agent-process-manager/: .dockerignore  .gitignore  Cargo.toml  README.md
agent-process-manager/cli/: build.rs
agent-process-manager/docs/: CODE_REVIEW_CREATE_PROCESS.md  DOMAIN_SERVICES_NAMING_STANDARD.md  PROCESS_CREATION_FLOW.md  USE_CASE_TESTS_CREATE_PROCESS.md
agent-process-manager/engine/: Cargo.toml  build.rs
agent-process-manager/examples/: simple-webserver.yaml  socket-activation.yaml
agent-process-manager/proto/: process_manager.proto
agent-process-manager/systemd/: INSTALLATION.md  README.md  dd-procmgrd-capability.service  dd-procmgrd-secure.service  dd-procmgrd-user.service  dd-procmgrd.service
agent-process-manager/tests/: Cargo.toml  common.rs  e2e_config_loading.rs  e2e_conflicts.rs  e2e_daemon_port.rs  e2e_health_checks.rs  e2e_orphan_processes.rs  e2e_process_types.rs  e2e_restart.rs  e2e_socket_activation.rs  e2e_socket_reactivation.rs  e2e_unique_names.rs
bazel/: AGENTS.md  BUILD.bazel  README.md  codereview_guideline.md  constants.bzl  gazelle_defs.bzl  go.work  internal  mergegate.datadog.yaml  prebuilt_buildtools.json  prebuilt_jq.json  prebuilt_tools.json  release.bzl
bazel/.devcontainer/: Dockerfile  devcontainer.json  devcontainer.override.arm64.json
bazel/buildifier/: BUILD.bazel
bazel/configs/: flavors.bazelrc  go.bazelrc  go_tests.bazelrc  procmgrd.bazelrc  rust.bazelrc  sdagent.bazelrc  sdagent_rc  system_probe_lite.bazelrc  target_platforms_rc
bazel/dotslash/: dotslash_tool.bzl
bazel/flags/: BUILD.bazel
bazel/flavors/: defs.bzl
bazel/lib/: agent.bzl
bazel/multitool/: BUILD.bazel  README.md  cwd.bzl  extension.bzl  workspace_root.bzl
bazel/patch/: go_systemd_systemd_headers.patch  godror-bazel.patch  gopacket_pcap.patch  opentelemetry_mapping_go_pkg_otlp_metrics-bazel.patch  rules_go_response_files_fix.patch  sds_rust_dep.patch
bazel/patches/: 0001-fix-c-x86_64-header-locations-with-our-ctng-toolchai.patch  buildifier-build.patch  buildifier-internal-factory.patch  buildifier-runner-bash-template.patch  buildifier-runner-bat-template.patch  buildifier.patch  datadog_agent_toolchain.patch  gazelle-expects-bazelified-go-work.patch  gazelle-go-mod-rc-version.patch  go-systemd-sdjournal-cdeps.patch  godror-odpi-cdeps.patch  gopacket-pcap-cdeps.patch  protobuf-crate-universe-extensions-rename.patch  protobuf-crate-universe-extensions.patch  rules_flex_header.patch  rules_go-cgo-ldflags-response-file.patch  rules_go-tag-independent-libraries.patch  rules_go-windows-symlink-workaround.patch  rules_python-issue-3579.patch  rules_rust-crateinfo-env-leak.patch  rules_rust-derive-dlltool-from-linker.patch  rules_rust-prefix-pwd-for-imacros.patch  sds-go-cdep.patch
bazel/prebuilt_inputs/: BUILD.bazel
bazel/repo/: BUILD.bazel  bazelify_go_work.bzl  constants_repo.bzl  env_vars.bzl  go_mod_tidy_all.bzl  minimized_btfs.bzl  parse_go_work.bzl  prebuilt_exists.bzl  prebuilt_file.bzl  release_json.bzl  release_json_test.bzl
bazel/rules/: BUILD.bazel  agent_config.bzl  cc_shared_library_wrapper.bzl  cgo_godefs.bzl  collect_cc_dynamic_deps.bzl  collect_cc_dynamic_deps_test.bzl  compression.bzl  dd_agent_expand_template.bzl  dd_agent_pkg_mklink.bzl  dd_auto_pkg_artifact.bzl  ebpf.bzl  foreign_cc_shared_wrapper.bzl  golden_file_test.bzl  packaged_artifacts.bzl  pkgconfig.bzl  preprocessor.bzl  proto.bzl  replace_prefix.sh  replace_shebang.bzl  so_symlink.bzl  template_expand_test.bzl  version_info.bzl  visual_studio.bzl  windows_resources.bzl  zstd.bzl
bazel/test_tags/: defs.bzl
bazel/tests/: BUILD.bazel  does_python_work.py
bazel/toolchains/: BUILD.bazel  toolchain_info.bzl
bazel/tools/: BUILD.bazel  bazelify_go_work.py  bazelisk_check.bzl  check_bazel_version.bzl  credential-helper  credential-helper.bat  fetch_size_deltas.py  generate_module_bazel.py  (+9 more)
cmd/: BUILD.bazel
compliance/: BUILD.bazel  gather_licenses.py  gather_licenses_test.py  license_csv.bzl  package_licenses.bzl  write_version_manifest.py
deva/: LICENSE.txt  README.md  pyproject.toml
rtloader/: .clang-format  .gitignore  BUILD.bazel  CMakeLists.txt  LICENSE  NOTICE  README.md  appveyor.yml  defs.bzl  test_subinterpreters.sh
six/: .clang-format  .gitignore  CMakeLists.txt  NOTICE  README.md  api.cpp  appveyor.yml  builtins.cpp  six.cpp
tasks/: 00001-p2-in-progress--agent-sandbox-spears-allium-spec.md  02001-p3-in-progress--cws-local-explore.md  07001-p2-in-progress--add-fuzz-tests-apm-dsd-parsing.md  32507-p2-done--startup-rss-shrinker.md  AGENTS.md  BUILD.bazel  __init__.py  agent.py  agent6.py  agent_ci_api.py  agent_payload_version.bzl  agent_sandbox.py  agentless_scanner.py  ai_sandbox.py  allinone.py  ami.py  android.py  anomalydetection.py  api.py  apm_injector.py  assign_pr.py  auth.py  bazel.py  bench.py  benchmarks.py  bootstrap.py  build_tags.bzl  build_tags.py  buildimages.py  ci_kpi.py  claude.py  cluster_agent.py  cluster_agent_cloudfoundry.py  cluster_agent_common.py  cluster_agent_helpers.py  code_review.py  codecov.py  collector.py  components.py  core_checks.py  (+151 more)
test/: BUILD.bazel  CMakeLists.txt  Makefile  README.md  conftest.py  info  molecule.sh  molecule3.sh  test_api.py  testvalues.reg  tox.ini
three/: CMakeLists.txt  aggregator.c  aggregator.h  constants.h.in  three.cpp  three.def  three.h
two/: CMakeLists.txt  constants.h.in  two.cpp  two.h
(+57591 files in other folders)
