# Global build settings

load("@bazel_lib//lib:write_source_files.bzl", "write_source_file")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
load("@bazel_skylib//rules:run_binary.bzl", "run_binary")
load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

package(default_visibility = ["//visibility:public"])

# Temporary export for hybrid omnibus/bazel build.
# This glob is empty running bazel alone in a pipeline job.
# It covers real files in the omnibus build after dda commands have run.
exports_files(glob(
    ["bin/**"],
    allow_empty = True,
))

# TODO(agent-build): remove below `gazelle:exclude` directives (automatically updates @bazelify_go_work//:go.work)
# gazelle:exclude cmd/agent
# gazelle:exclude cmd/cluster-agent
# gazelle:exclude cmd/cluster-agent-cloudfoundry
# gazelle:exclude cmd/dogstatsd
# gazelle:exclude cmd/host-profiler
# gazelle:exclude cmd/installer/subcommands
# gazelle:exclude cmd/installer/user
# gazelle:exclude cmd/installer/windows_resources
# gazelle:exclude cmd/iot-agent
# gazelle:exclude cmd/loader
# gazelle:exclude cmd/otel-agent
# gazelle:exclude cmd/privateactionrunner
# gazelle:exclude cmd/process-agent
# gazelle:exclude cmd/sbomgen
# gazelle:exclude cmd/secret-generic-connector/backend/backend.go
# gazelle:exclude cmd/secret-generic-connector/backend/backend_test.go
# gazelle:exclude cmd/secret-generic-connector/backend/error.go
# gazelle:exclude cmd/secret-generic-connector/backend/error_test.go
# gazelle:exclude cmd/secret-generic-connector/backend/main.go
# gazelle:exclude cmd/secret-generic-connector/main.go
# gazelle:exclude cmd/secrethelper
# gazelle:exclude cmd/security-agent
# gazelle:exclude cmd/serverless-init
# gazelle:exclude cmd/system-probe/modules
# gazelle:exclude cmd/system-probe/subcommands/compliance
# gazelle:exclude cmd/system-probe/subcommands/config
# gazelle:exclude cmd/system-probe/subcommands/coverage
# gazelle:exclude cmd/system-probe/subcommands/debug
# gazelle:exclude cmd/system-probe/subcommands/ebpf
# gazelle:exclude cmd/system-probe/subcommands/modrestart
# gazelle:exclude cmd/system-probe/subcommands/run
# gazelle:exclude cmd/system-probe/subcommands/runtime
# gazelle:exclude cmd/system-probe/subcommands/usm
# gazelle:exclude cmd/system-probe/windows
# gazelle:exclude cmd/system-probe/windows_resources
# gazelle:exclude cmd/systray
# gazelle:exclude cmd/testdata
# gazelle:exclude cmd/trace-agent
# gazelle:exclude comp/agent
# gazelle:exclude comp/aggregator
# gazelle:exclude comp/api/api/apiimpl/api.go
# gazelle:exclude comp/api/api/apiimpl/api_mock.go
# gazelle:exclude comp/api/api/apiimpl/api_test.go
# gazelle:exclude comp/api/api/apiimpl/internal/agent
# gazelle:exclude comp/api/api/apiimpl/server.go
# gazelle:exclude comp/api/api/apiimpl/server_cmd.go
# gazelle:exclude comp/api/api/apiimpl/server_ipc.go
# gazelle:exclude comp/api/api/apiimpl/server_test.go
# gazelle:exclude comp/api/api/utils
# gazelle:exclude comp/api/authtoken
# gazelle:exclude comp/api/bundle.go
# gazelle:exclude comp/api/bundle_test.go
# gazelle:exclude comp/api/commonendpoints
# gazelle:exclude comp/api/grpcserver/fx-agent
# gazelle:exclude comp/api/grpcserver/impl-agent
# gazelle:exclude comp/checks/agentcrashdetect/fx
# gazelle:exclude comp/checks/agentcrashdetect/impl
# gazelle:exclude comp/checks/windowseventlog/def
# gazelle:exclude comp/checks/windowseventlog/fx
# gazelle:exclude comp/checks/windowseventlog/impl
# gazelle:exclude comp/checks/winregistry/fx
# gazelle:exclude comp/checks/winregistry/impl
# gazelle:exclude comp/collector
# gazelle:exclude comp/connectivitychecker/checker
# gazelle:exclude comp/connectivitychecker/fx
# gazelle:exclude comp/connectivitychecker/impl
# gazelle:exclude comp/core/agenttelemetry/fx
# gazelle:exclude comp/core/agenttelemetry/impl
# gazelle:exclude comp/core/autodiscovery/autodiscoveryimpl
# gazelle:exclude comp/core/autodiscovery/common/utils
# gazelle:exclude comp/core/autodiscovery/configresolver
# gazelle:exclude comp/core/autodiscovery/integration
# gazelle:exclude comp/core/autodiscovery/listeners
# gazelle:exclude comp/core/autodiscovery/noopimpl
# gazelle:exclude comp/core/autodiscovery/proto
# gazelle:exclude comp/core/autodiscovery/providers
# gazelle:exclude comp/core/autodiscovery/scheduler
# gazelle:exclude comp/core/autodiscovery/status
# gazelle:exclude comp/core/autodiscovery/stream
# gazelle:exclude comp/core/bundle.go
# gazelle:exclude comp/core/bundle_mock.go
# gazelle:exclude comp/core/bundle_params.go
# gazelle:exclude comp/core/bundle_test.go
# gazelle:exclude comp/core/diagnose/def
# gazelle:exclude comp/core/diagnose/fx
# gazelle:exclude comp/core/diagnose/impl
# gazelle:exclude comp/core/diagnose/local
# gazelle:exclude comp/core/flare/flareimpl
# gazelle:exclude comp/core/flare/helpers
# gazelle:exclude comp/core/gui
# gazelle:exclude comp/core/hostname/hostnameimpl
# gazelle:exclude comp/core/hostname/remotehostnameimpl
# gazelle:exclude comp/core/log/fx
# gazelle:exclude comp/core/log/fx-systemprobe
# gazelle:exclude comp/core/log/fx-trace
# gazelle:exclude comp/core/log/impl-systemprobe
# gazelle:exclude comp/core/log/rust
# gazelle:exclude comp/core/profiler/fx
# gazelle:exclude comp/core/profiler/impl
# gazelle:exclude comp/core/remoteagent/def
# gazelle:exclude comp/core/remoteagentregistry/def
# gazelle:exclude comp/core/remoteagentregistry/fx
# gazelle:exclude comp/core/remoteagentregistry/impl
# gazelle:exclude comp/core/remoteagentregistry/status
# gazelle:exclude comp/core/settings
# gazelle:exclude comp/core/sysprobeconfig
# gazelle:exclude comp/core/tagger/collectors
# gazelle:exclude comp/core/tagger/fx
# gazelle:exclude comp/core/tagger/fx-dual
# gazelle:exclude comp/core/tagger/fx-mock
# gazelle:exclude comp/core/tagger/impl
# gazelle:exclude comp/core/tagger/impl-dual
# gazelle:exclude comp/core/tagger/k8s_metadata
# gazelle:exclude comp/core/tagger/kubetags
# gazelle:exclude comp/core/tagger/mock
# gazelle:exclude comp/core/tagger/tagstore
# gazelle:exclude comp/core/workloadfilter/baseimpl
# gazelle:exclude comp/core/workloadfilter/catalog
# gazelle:exclude comp/core/workloadfilter/fx
# gazelle:exclude comp/core/workloadfilter/fx-mock
# gazelle:exclude comp/core/workloadfilter/fx-remote
# gazelle:exclude comp/core/workloadfilter/impl
# gazelle:exclude comp/core/workloadfilter/program
# gazelle:exclude comp/core/workloadfilter/remoteimpl
# gazelle:exclude comp/core/workloadfilter/util/docker
# gazelle:exclude comp/core/workloadmeta/collectors
# gazelle:exclude comp/core/workloadmeta/defaults
# gazelle:exclude comp/core/workloadmeta/fx
# gazelle:exclude comp/core/workloadmeta/fx-mock
# gazelle:exclude comp/core/workloadmeta/impl
# gazelle:exclude comp/core/workloadmeta/init
# gazelle:exclude comp/core/workloadmeta/proto
# gazelle:exclude comp/core/workloadmeta/server
# gazelle:exclude comp/dataobs/queryactions/fx
# gazelle:exclude comp/dataobs/queryactions/impl
# gazelle:exclude comp/dogstatsd/constants
# gazelle:exclude comp/dogstatsd/http
# gazelle:exclude comp/dogstatsd/pidmap
# gazelle:exclude comp/dogstatsd/replay/fx
# gazelle:exclude comp/dogstatsd/replay/impl
# gazelle:exclude comp/dogstatsd/server
# gazelle:exclude comp/dogstatsd/status
# gazelle:exclude comp/fleetstatus/fx
# gazelle:exclude comp/fleetstatus/impl
# gazelle:exclude comp/forwarder/eventplatform
# gazelle:exclude comp/forwarder/eventplatformreceiver
# gazelle:exclude comp/forwarder/orchestrator/orchestratorimpl
# gazelle:exclude comp/haagent/fx
# gazelle:exclude comp/haagent/impl
# gazelle:exclude comp/healthplatform/fx
# gazelle:exclude comp/healthplatform/impl
# gazelle:exclude comp/healthplatform/mock
# gazelle:exclude comp/host-profiler/collector/fx
# gazelle:exclude comp/host-profiler/collector/impl/agentprovider
# gazelle:exclude comp/host-profiler/collector/impl/converters
# gazelle:exclude comp/host-profiler/collector/impl/params
# gazelle:exclude comp/host-profiler/collector/impl/processor
# gazelle:exclude comp/host-profiler/collector/impl/receiver
# gazelle:exclude comp/host-profiler/flare
# gazelle:exclude comp/host-profiler/symboluploader/pclntab
# gazelle:exclude comp/host-profiler/symboluploader/symbol
# gazelle:exclude comp/host-profiler/symboluploader/symbolcopier
# gazelle:exclude comp/languagedetection/client/fx
# gazelle:exclude comp/languagedetection/client/impl
# gazelle:exclude comp/logonduration/fx
# gazelle:exclude comp/logonduration/impl
# gazelle:exclude comp/logs-library/pipeline
# gazelle:exclude comp/logs-library/processor
# gazelle:exclude comp/logs-library/sender
# gazelle:exclude comp/logs/adscheduler
# gazelle:exclude comp/logs/agent/agentimpl
# gazelle:exclude comp/logs/agent/flare
# gazelle:exclude comp/logs/auditor
# gazelle:exclude comp/logs/integrations
# gazelle:exclude comp/logs/streamlogs/def
# gazelle:exclude comp/logs/streamlogs/fx
# gazelle:exclude comp/logs/streamlogs/impl
# gazelle:exclude comp/metadata/clusteragent
# gazelle:exclude comp/metadata/clusterchecks
# gazelle:exclude comp/metadata/haagent
# gazelle:exclude comp/metadata/host
# gazelle:exclude comp/metadata/hostgpu
# gazelle:exclude comp/metadata/hostsysteminfo
# gazelle:exclude comp/metadata/internal
# gazelle:exclude comp/metadata/inventoryagent
# gazelle:exclude comp/metadata/inventorychecks/fx
# gazelle:exclude comp/metadata/inventorychecks/impl
# gazelle:exclude comp/metadata/inventoryhost
# gazelle:exclude comp/metadata/packagesigning/fx
# gazelle:exclude comp/metadata/packagesigning/impl
# gazelle:exclude comp/metadata/packagesigning/utils
# gazelle:exclude comp/metadata/resources/def
# gazelle:exclude comp/metadata/resources/fx
# gazelle:exclude comp/metadata/resources/impl
# gazelle:exclude comp/metadata/runner
# gazelle:exclude comp/metadata/securityagent
# gazelle:exclude comp/metadata/systemprobe
# gazelle:exclude comp/ndmtmp
# gazelle:exclude comp/netflow/flowaggregator
# gazelle:exclude comp/netflow/goflowlib
# gazelle:exclude comp/netflow/server
# gazelle:exclude comp/netflow/testutil
# gazelle:exclude comp/netflow/topn
# gazelle:exclude comp/networkpath/npcollector/fx
# gazelle:exclude comp/networkpath/npcollector/mock
# gazelle:exclude comp/networkpath/npcollector/model
# gazelle:exclude comp/networkconfigmanagement
# gazelle:exclude comp/networkpath/traceroute/fx-local
# gazelle:exclude comp/networkpath/traceroute/fx-remote
# gazelle:exclude comp/networkpath/traceroute/impl-local
# gazelle:exclude comp/networkpath/traceroute/impl-remote
# gazelle:exclude comp/notableevents/fx
# gazelle:exclude comp/notableevents/impl
# gazelle:exclude comp/offlinereporter/fx
# gazelle:exclude comp/offlinereporter/impl
# gazelle:exclude comp/otelcol/collector-contrib/fx
# gazelle:exclude comp/otelcol/collector-contrib/impl
# gazelle:exclude comp/otelcol/collector/fx
# gazelle:exclude comp/otelcol/collector/fx-pipeline
# gazelle:exclude comp/otelcol/collector/impl
# gazelle:exclude comp/otelcol/collector/impl-pipeline
# gazelle:exclude comp/otelcol/converter/examples
# gazelle:exclude comp/otelcol/ddflareextension/fx
# gazelle:exclude comp/otelcol/ddflareextension/image
# gazelle:exclude comp/otelcol/ddflareextension/impl/testdata
# gazelle:exclude comp/otelcol/ddprofilingextension/fx
# gazelle:exclude comp/otelcol/ddprofilingextension/impl
# gazelle:exclude comp/otelcol/dogtelextension/fx
# gazelle:exclude comp/otelcol/logsagentpipeline
# gazelle:exclude comp/otelcol/otlp/components/exporter
# gazelle:exclude comp/otelcol/otlp/components/processor
# gazelle:exclude comp/otelcol/otlp/configcheck
# gazelle:exclude comp/otelcol/otlp/integrationtest
# gazelle:exclude comp/otelcol/otlp/internal
# gazelle:exclude comp/otelcol/otlp/testdata
# gazelle:exclude comp/otelcol/status/fx
# gazelle:exclude comp/otelcol/status/impl
# gazelle:exclude comp/privateactionrunner/fx
# gazelle:exclude comp/privateactionrunner/impl
# gazelle:exclude comp/privateactionrunner/status
# gazelle:exclude comp/process/agent
# gazelle:exclude comp/process/apiserver
# gazelle:exclude comp/process/connectionscheck
# gazelle:exclude comp/process/containercheck
# gazelle:exclude comp/process/expvars
# gazelle:exclude comp/process/gpusubscriber/def
# gazelle:exclude comp/process/gpusubscriber/fx
# gazelle:exclude comp/process/gpusubscriber/fx-mock
# gazelle:exclude comp/process/gpusubscriber/impl
# gazelle:exclude comp/process/hostinfo
# gazelle:exclude comp/process/processcheck
# gazelle:exclude comp/process/processdiscoverycheck
# gazelle:exclude comp/process/profiler
# gazelle:exclude comp/process/rtcontainercheck
# gazelle:exclude comp/process/runner
# gazelle:exclude comp/process/status
# gazelle:exclude comp/process/submitter
# gazelle:exclude comp/process/types
# gazelle:exclude comp/rdnsquerier/fx-mock
# gazelle:exclude comp/remote-config/rcclient/fx
# gazelle:exclude comp/remote-config/rcclient/impl
# gazelle:exclude comp/remote-config/rcservice/fx
# gazelle:exclude comp/remote-config/rcservice/impl
# gazelle:exclude comp/remote-config/rcservicemrf/fx
# gazelle:exclude comp/remote-config/rcservicemrf/impl
# gazelle:exclude comp/remote-config/rcstatus
# gazelle:exclude comp/snmpscan
# gazelle:exclude comp/snmpscanmanager/fx
# gazelle:exclude comp/snmpscanmanager/impl
# gazelle:exclude comp/snmptraps/config
# gazelle:exclude comp/snmptraps/formatter/fx
# gazelle:exclude comp/snmptraps/formatter/impl
# gazelle:exclude comp/snmptraps/forwarder/fx
# gazelle:exclude comp/snmptraps/forwarder/impl
# gazelle:exclude comp/snmptraps/listener/fx
# gazelle:exclude comp/snmptraps/listener/impl
# gazelle:exclude comp/snmptraps/senderhelper
# gazelle:exclude comp/snmptraps/server
# gazelle:exclude comp/snmptraps/snmplog
# gazelle:exclude comp/snmptraps/status
# gazelle:exclude comp/softwareinventory/fx
# gazelle:exclude comp/softwareinventory/impl
# gazelle:exclude comp/syntheticstestscheduler/def
# gazelle:exclude comp/syntheticstestscheduler/fx
# gazelle:exclude comp/syntheticstestscheduler/impl
# gazelle:exclude comp/systray/systray/fx
# gazelle:exclude comp/systray/systray/impl
# gazelle:exclude comp/trace/agent/fx
# gazelle:exclude comp/trace/agent/fx-mock
# gazelle:exclude comp/trace/agent/impl
# gazelle:exclude comp/trace/config/fx
# gazelle:exclude comp/trace/config/impl
# gazelle:exclude comp/trace/config/mock
# gazelle:exclude comp/trace/config/testdata
# gazelle:exclude comp/trace/etwtracer
# gazelle:exclude comp/trace/payload-modifier
# gazelle:exclude comp/trace/status
# gazelle:exclude comp/workloadselection/def
# gazelle:exclude internal/remote-agent
# gazelle:exclude internal/third_party/client-go
# gazelle:exclude pkg/aggregator/mocksender
# gazelle:exclude pkg/aggregator/sender
# gazelle:exclude pkg/cli/standalone
# gazelle:exclude pkg/cli/subcommands/autoscalerlist
# gazelle:exclude pkg/cli/subcommands/check
# gazelle:exclude pkg/cli/subcommands/clusterchecks
# gazelle:exclude pkg/cli/subcommands/config
# gazelle:exclude pkg/cli/subcommands/dcaconfigcheck
# gazelle:exclude pkg/cli/subcommands/dcaflare
# gazelle:exclude pkg/cli/subcommands/experimental
# gazelle:exclude pkg/cli/subcommands/health
# gazelle:exclude pkg/cli/subcommands/processchecks
# gazelle:exclude pkg/cli/subcommands/taggerlist
# gazelle:exclude pkg/cli/subcommands/workloadfilter
# gazelle:exclude pkg/cli/subcommands/workloadlist
# gazelle:exclude pkg/cloudfoundry
# gazelle:exclude pkg/clusteragent/admission
# gazelle:exclude pkg/clusteragent/appsec
# gazelle:exclude pkg/clusteragent/autoscaling
# gazelle:exclude pkg/clusteragent/clusterchecks
# gazelle:exclude pkg/clusteragent/evictor
# gazelle:exclude pkg/clusteragent/kubeactions
# gazelle:exclude pkg/clusteragent/languagedetection
# gazelle:exclude pkg/clusteragent/mcp
# gazelle:exclude pkg/clusteragent/metricsstatus
# gazelle:exclude pkg/clusteragent/metricsstore
# gazelle:exclude pkg/clusteragent/orchestrator
# gazelle:exclude pkg/clusteragent/patcher
# gazelle:exclude pkg/clusteragent/telemetry
# gazelle:exclude pkg/collector/aggregator
# gazelle:exclude pkg/collector/check/id
# gazelle:exclude pkg/collector/check/stats
# gazelle:exclude pkg/collector/check/stub
# gazelle:exclude pkg/collector/check/testdata
# gazelle:exclude pkg/collector/corechecks/agentprofiling
# gazelle:exclude pkg/collector/corechecks/cloud
# gazelle:exclude pkg/collector/corechecks/cluster
# gazelle:exclude pkg/collector/corechecks/containerimage
# gazelle:exclude pkg/collector/corechecks/containerlifecycle
# gazelle:exclude pkg/collector/corechecks/containers
# gazelle:exclude pkg/collector/corechecks/discovery
# gazelle:exclude pkg/collector/corechecks/ebpf
# gazelle:exclude pkg/collector/corechecks/embed
# gazelle:exclude pkg/collector/corechecks/gpu
# gazelle:exclude pkg/collector/corechecks/net
# gazelle:exclude pkg/collector/corechecks/network-devices
# gazelle:exclude pkg/collector/corechecks/networkconfigmanagement
# gazelle:exclude pkg/collector/corechecks/networkpath
# gazelle:exclude pkg/collector/corechecks/nvidia
# gazelle:exclude pkg/collector/corechecks/oracle
# gazelle:exclude pkg/collector/corechecks/orchestrator
# gazelle:exclude pkg/collector/corechecks/sbom
# gazelle:exclude pkg/collector/corechecks/snmp/internal/checkconfig
# gazelle:exclude pkg/collector/corechecks/snmp/internal/devicecheck
# gazelle:exclude pkg/collector/corechecks/snmp/internal/discovery
# gazelle:exclude pkg/collector/corechecks/snmp/internal/fetch
# gazelle:exclude pkg/collector/corechecks/snmp/internal/lldp
# gazelle:exclude pkg/collector/corechecks/snmp/internal/metadata
# gazelle:exclude pkg/collector/corechecks/snmp/internal/profile
# gazelle:exclude pkg/collector/corechecks/snmp/internal/report
# gazelle:exclude pkg/collector/corechecks/snmp/internal/session
# gazelle:exclude pkg/collector/corechecks/snmp/internal/test
# gazelle:exclude pkg/collector/corechecks/snmp/internal/valuestore
# gazelle:exclude pkg/collector/corechecks/snmp/status
# gazelle:exclude pkg/collector/corechecks/system
# gazelle:exclude pkg/collector/corechecks/systemd
# gazelle:exclude pkg/collector/corechecks/telemetry
# gazelle:exclude pkg/collector/loaders
# gazelle:exclude pkg/collector/python
# gazelle:exclude pkg/collector/runner
# gazelle:exclude pkg/collector/scheduler
# gazelle:exclude pkg/collector/sharedlibrary
# gazelle:exclude pkg/collector/worker
# gazelle:exclude pkg/commonchecks
# gazelle:exclude pkg/compliance/aptconfig
# gazelle:exclude pkg/compliance/cli
# gazelle:exclude pkg/compliance/dbconfig
# gazelle:exclude pkg/compliance/k8sconfig
# gazelle:exclude pkg/compliance/scap
# gazelle:exclude pkg/compliance/tests
# gazelle:exclude pkg/compliance/tools/k8s_schema_generator
# gazelle:exclude pkg/compliance/tools/k8s_types_generator
# gazelle:exclude pkg/compliance/types
# gazelle:exclude pkg/compliance/utils
# gazelle:exclude pkg/config/autodiscovery
# gazelle:exclude pkg/config/fetcher/sysprobe
# gazelle:exclude pkg/config/legacy
# gazelle:exclude pkg/config/settings
# gazelle:exclude pkg/containerlifecycle
# gazelle:exclude pkg/databasemonitoring
# gazelle:exclude pkg/diagnose/connectivity
# gazelle:exclude pkg/diagnose/ports
# gazelle:exclude pkg/discovery/apm
# gazelle:exclude pkg/discovery/envs
# gazelle:exclude pkg/discovery/language
# gazelle:exclude pkg/discovery/model
# gazelle:exclude pkg/discovery/module/rust/include
# gazelle:exclude pkg/discovery/module/rust/sd-agent
# gazelle:exclude pkg/discovery/module/rust/src
# gazelle:exclude pkg/discovery/module/rust/testdata
# gazelle:exclude pkg/discovery/module/rust/tests
# gazelle:exclude pkg/discovery/testdata
# gazelle:exclude pkg/discovery/usm
# gazelle:exclude pkg/dyninst/decode
# gazelle:exclude pkg/dyninst/dispatcher
# gazelle:exclude pkg/dyninst/dwarf/loclist
# gazelle:exclude pkg/dyninst/dyninsttest
# gazelle:exclude pkg/dyninst/ebpf
# gazelle:exclude pkg/dyninst/ebpfbench
# gazelle:exclude pkg/dyninst/exprlang
# gazelle:exclude pkg/dyninst/gosym
# gazelle:exclude pkg/dyninst/gotype
# gazelle:exclude pkg/dyninst/htlhash
# gazelle:exclude pkg/dyninst/irgen
# gazelle:exclude pkg/dyninst/irprinter
# gazelle:exclude pkg/dyninst/loader
# gazelle:exclude pkg/dyninst/module
# gazelle:exclude pkg/dyninst/object
# gazelle:exclude pkg/dyninst/process
# gazelle:exclude pkg/dyninst/procsubscribe
# gazelle:exclude pkg/dyninst/symbol
# gazelle:exclude pkg/dyninst/symdb
# gazelle:exclude pkg/dyninst/testprogs
# gazelle:exclude pkg/dyninst/trietest
# gazelle:exclude pkg/dyninst/uploader
# gazelle:exclude pkg/dyninst/uprobe
# gazelle:exclude pkg/ebpf/_obj
# gazelle:exclude pkg/ebpf/bytecode
# gazelle:exclude pkg/ebpf/compiler
# gazelle:exclude pkg/ebpf/ebpftest
# gazelle:exclude pkg/ebpf/features
# gazelle:exclude pkg/ebpf/kernelbugs
# gazelle:exclude pkg/ebpf/maps
# gazelle:exclude pkg/ebpf/modifiers
# gazelle:exclude pkg/ebpf/names
# gazelle:exclude pkg/ebpf/perf
# gazelle:exclude pkg/ebpf/uprobes
# gazelle:exclude pkg/ebpf/verifier
# gazelle:exclude pkg/eventmonitor
# gazelle:exclude pkg/flare
# gazelle:exclude pkg/fleet/installer/packages/embedded/tmpl
# gazelle:exclude pkg/gpu/config
# gazelle:exclude pkg/gpu/containers
# gazelle:exclude pkg/gpu/ebpf
# gazelle:exclude pkg/gpu/integrationtests
# gazelle:exclude pkg/gpu/safenvml
# gazelle:exclude pkg/gpu/testutil
# gazelle:exclude pkg/hosttags
# gazelle:exclude pkg/jmxfetch
# gazelle:exclude pkg/kubestatemetrics
# gazelle:exclude pkg/languagedetection/internal
# gazelle:exclude pkg/languagedetection/privileged
# gazelle:exclude pkg/languagedetection/util
# gazelle:exclude pkg/logonduration
# gazelle:exclude pkg/logs/client/http
# gazelle:exclude pkg/logs/client/tcp
# gazelle:exclude pkg/logs/diagnostic
# gazelle:exclude pkg/logs/internal/decoder
# gazelle:exclude pkg/logs/internal/framer
# gazelle:exclude pkg/logs/internal/parsers
# gazelle:exclude pkg/logs/internal/tag
# gazelle:exclude pkg/logs/internal/util/adlistener
# gazelle:exclude pkg/logs/internal/util/containersorpods
# gazelle:exclude pkg/logs/launchers
# gazelle:exclude pkg/logs/message
# gazelle:exclude pkg/logs/pipeline
# gazelle:exclude pkg/logs/processor
# gazelle:exclude pkg/logs/schedulers
# gazelle:exclude pkg/logs/sources
# gazelle:exclude pkg/logs/status/builder.go
# gazelle:exclude pkg/logs/status/status.go
# gazelle:exclude pkg/logs/status/status_test.go
# gazelle:exclude pkg/logs/status/test_utils.go
# gazelle:exclude pkg/logs/tailers
# gazelle:exclude pkg/logs/util/windowsevent
# gazelle:exclude pkg/network/containers
# gazelle:exclude pkg/network/dns
# gazelle:exclude pkg/network/ebpf
# gazelle:exclude pkg/network/encoding
# gazelle:exclude pkg/network/events
# gazelle:exclude pkg/network/filter
# gazelle:exclude pkg/network/go/asmscan
# gazelle:exclude pkg/network/go/bininspect
# gazelle:exclude pkg/network/go/dwarfutils
# gazelle:exclude pkg/network/go/goid
# gazelle:exclude pkg/network/go/goversion
# gazelle:exclude pkg/network/go/rungo
# gazelle:exclude pkg/network/indexedset
# gazelle:exclude pkg/network/netlink
# gazelle:exclude pkg/network/protocols/amqp
# gazelle:exclude pkg/network/protocols/http/debugging
# gazelle:exclude pkg/network/protocols/http/gotls/lookup
# gazelle:exclude pkg/network/protocols/http/testutil
# gazelle:exclude pkg/network/protocols/kafka/debugging
# gazelle:exclude pkg/network/protocols/mongo
# gazelle:exclude pkg/network/protocols/mysql
# gazelle:exclude pkg/network/protocols/postgres
# gazelle:exclude pkg/network/protocols/redis/debugging
# gazelle:exclude pkg/network/protocols/testutil
# gazelle:exclude pkg/network/protocols/tls/gotls/testutil/gotls_server
# gazelle:exclude pkg/network/protocols/tls/nodejs
# gazelle:exclude pkg/network/sender
# gazelle:exclude pkg/network/slice
# gazelle:exclude pkg/network/testdata
# gazelle:exclude pkg/network/tracer
# gazelle:exclude pkg/network/types
# gazelle:exclude pkg/network/usm
# gazelle:exclude pkg/networkconfigmanagement
# gazelle:exclude pkg/networkdevice/diagnoses
# gazelle:exclude pkg/networkdevice/integrations
# gazelle:exclude pkg/networkdevice/metadata
# gazelle:exclude pkg/networkdevice/pinger
# gazelle:exclude pkg/networkdevice/sender
# gazelle:exclude pkg/networkdevice/utils
# gazelle:exclude pkg/networkpath/metricsender
# gazelle:exclude pkg/networkpath/telemetry
# gazelle:exclude pkg/networkpath/traceroute/runner
# gazelle:exclude pkg/opentelemetry-mapping-go/inframetadata/internal/hostmap
# gazelle:exclude pkg/orchestrator/config
# gazelle:exclude pkg/privateactionrunner/adapters/actions
# gazelle:exclude pkg/privateactionrunner/adapters/constants
# gazelle:exclude pkg/privateactionrunner/adapters/modes
# gazelle:exclude pkg/privateactionrunner/adapters/regions
# gazelle:exclude pkg/privateactionrunner/adapters/tmpl
# gazelle:exclude pkg/privateactionrunner/adapters/workflowjsonschema
# gazelle:exclude pkg/privateactionrunner/autoconnections
# gazelle:exclude pkg/privateactionrunner/bundles/remoteaction
# gazelle:exclude pkg/privateactionrunner/bundles/script
# gazelle:exclude pkg/privateactionrunner/enrollment
# gazelle:exclude pkg/privateactionrunner/libs/connection
# gazelle:exclude pkg/privateactionrunner/runners
# gazelle:exclude pkg/privileged-logs
# gazelle:exclude pkg/process/checks
# gazelle:exclude pkg/process/metadata
# gazelle:exclude pkg/process/monitor
# gazelle:exclude pkg/process/net
# gazelle:exclude pkg/process/procutil
# gazelle:exclude pkg/process/runner/mocks
# gazelle:exclude pkg/process/subscribers
# gazelle:exclude pkg/process/util/containers
# gazelle:exclude pkg/process/util/coreagent
# gazelle:exclude pkg/process/util/status
# gazelle:exclude pkg/procmgr
# gazelle:exclude pkg/proto/datadog/api
# gazelle:exclude pkg/proto/datadog/autodiscovery
# gazelle:exclude pkg/proto/datadog/dogstatsdhttp
# gazelle:exclude pkg/proto/datadog/kubemetadata
# gazelle:exclude pkg/proto/datadog/model
# gazelle:exclude pkg/proto/datadog/privateactionrunner
# gazelle:exclude pkg/proto/datadog/process
# gazelle:exclude pkg/proto/datadog/remoteagent
# gazelle:exclude pkg/proto/datadog/remoteconfig
# gazelle:exclude pkg/proto/datadog/sbom
# gazelle:exclude pkg/proto/datadog/workloadfilter
# gazelle:exclude pkg/proto/datadog/workloadmeta
# gazelle:exclude pkg/proto/protodep
# gazelle:exclude pkg/redact
# gazelle:exclude pkg/sbom/collectors/docker
# gazelle:exclude pkg/sbom/collectors/host
# gazelle:exclude pkg/sbom/collectors/procfs
# gazelle:exclude pkg/sbom/scanner
# gazelle:exclude pkg/security/agent
# gazelle:exclude pkg/security/clihelpers
# gazelle:exclude pkg/security/config
# gazelle:exclude pkg/security/ebpf
# gazelle:exclude pkg/security/events
# gazelle:exclude pkg/security/generators/accessors/common
# gazelle:exclude pkg/security/generators/backend_doc
# gazelle:exclude pkg/security/generators/event_copy
# gazelle:exclude pkg/security/generators/operators
# gazelle:exclude pkg/security/generators/syscall_table_generator
# gazelle:exclude pkg/security/metrics
# gazelle:exclude pkg/security/module
# gazelle:exclude pkg/security/probe/config
# gazelle:exclude pkg/security/probe/constantfetch
# gazelle:exclude pkg/security/probe/eventstream
# gazelle:exclude pkg/security/probe/kfilters
# gazelle:exclude pkg/security/probe/monitors
# gazelle:exclude pkg/security/probe/selftests
# gazelle:exclude pkg/security/probe/testdata
# gazelle:exclude pkg/security/process_list
# gazelle:exclude pkg/security/proto/api
# gazelle:exclude pkg/security/rconfig
# gazelle:exclude pkg/security/reporter
# gazelle:exclude pkg/security/resolvers/dentry
# gazelle:exclude pkg/security/resolvers/dns
# gazelle:exclude pkg/security/resolvers/envvars
# gazelle:exclude pkg/security/resolvers/file
# gazelle:exclude pkg/security/resolvers/hash
# gazelle:exclude pkg/security/resolvers/mount
# gazelle:exclude pkg/security/resolvers/netns
# gazelle:exclude pkg/security/resolvers/path
# gazelle:exclude pkg/security/resolvers/process
# gazelle:exclude pkg/security/resolvers/securitydescriptors
# gazelle:exclude pkg/security/resolvers/selinux
# gazelle:exclude pkg/security/resolvers/tags
# gazelle:exclude pkg/security/resolvers/tc
# gazelle:exclude pkg/security/resolvers/usergroup
# gazelle:exclude pkg/security/resolvers/usersessions
# gazelle:exclude pkg/security/rules
# gazelle:exclude pkg/security/seclog
# gazelle:exclude pkg/security/security_profile
# gazelle:exclude pkg/security/serializers
# gazelle:exclude pkg/security/telemetry
# gazelle:exclude pkg/security/tests
# gazelle:exclude pkg/security/utils/k8sutils
# gazelle:exclude pkg/security/utils/lru/internal
# gazelle:exclude pkg/serializer/internal
# gazelle:exclude pkg/serverless/logs
# gazelle:exclude pkg/serverless/metrics
# gazelle:exclude pkg/serverless/otlp
# gazelle:exclude pkg/serverless/streamlogs
# gazelle:exclude pkg/serverless/trace
# gazelle:exclude pkg/snmp/devicededuper
# gazelle:exclude pkg/snmp/gosnmplib
# gazelle:exclude pkg/snmp/snmpparse
# gazelle:exclude pkg/status/clusteragent
# gazelle:exclude pkg/status/collector
# gazelle:exclude pkg/status/endpoints
# gazelle:exclude pkg/status/httpproxy
# gazelle:exclude pkg/status/jmx
# gazelle:exclude pkg/status/render
# gazelle:exclude pkg/status/status.go
# gazelle:exclude pkg/status/status_test.go
# gazelle:exclude pkg/status/systemprobe
# gazelle:exclude pkg/status/types.go
# gazelle:exclude pkg/system-probe/api/client
# gazelle:exclude pkg/system-probe/api/module
# gazelle:exclude pkg/system-probe/api/server/testutil
# gazelle:exclude pkg/system-probe/config
# gazelle:exclude pkg/trace/otel/integration
# gazelle:exclude pkg/util/cloudproviders/gce
# gazelle:exclude pkg/util/cloudproviders/kubernetes
# gazelle:exclude pkg/util/cloudproviders/network
# gazelle:exclude pkg/util/clusteragent
# gazelle:exclude pkg/util/containerd
# gazelle:exclude pkg/util/containers/cri
# gazelle:exclude pkg/util/containers/metadata
# gazelle:exclude pkg/util/containers/metrics/containerd
# gazelle:exclude pkg/util/containers/metrics/cri
# gazelle:exclude pkg/util/containers/metrics/docker
# gazelle:exclude pkg/util/containers/metrics/ecsfargate
# gazelle:exclude pkg/util/containers/metrics/ecsmanagedinstances
# gazelle:exclude pkg/util/containers/metrics/kubelet
# gazelle:exclude pkg/util/containers/metrics/mock
# gazelle:exclude pkg/util/containers/metrics/system
# gazelle:exclude pkg/util/crashreport
# gazelle:exclude pkg/util/crio
# gazelle:exclude pkg/util/docker
# gazelle:exclude pkg/util/ec2/tags
# gazelle:exclude pkg/util/ecs/metadata
# gazelle:exclude pkg/util/ecs/telemetry
# gazelle:exclude pkg/util/fargate
# gazelle:exclude pkg/util/kernel/headers
# gazelle:exclude pkg/util/kernel/testdata
# gazelle:exclude pkg/util/kubelet
# gazelle:exclude pkg/util/kubernetes/apiserver/controllers
# gazelle:exclude pkg/util/kubernetes/apiserver/leaderelection/leaderelection.go
# gazelle:exclude pkg/util/kubernetes/apiserver/leaderelection/leaderelection_engine.go
# gazelle:exclude pkg/util/kubernetes/apiserver/leaderelection/leaderelection_engine_test.go
# gazelle:exclude pkg/util/kubernetes/apiserver/leaderelection/leaderelection_stub.go
# gazelle:exclude pkg/util/kubernetes/apiserver/leaderelection/leaderelection_test.go
# gazelle:exclude pkg/util/kubernetes/apiserver/leaderelection/metrics
# gazelle:exclude pkg/util/kubernetes/apiserver/leaderelection/status.go
# gazelle:exclude pkg/util/kubernetes/apiserver/leaderelection/status_templates
# gazelle:exclude pkg/util/kubernetes/apiserver/leaderelection/status_test.go
# gazelle:exclude pkg/util/kubernetes/autoscalers
# gazelle:exclude pkg/util/kubernetes/certificate
# gazelle:exclude pkg/util/kubernetes/cloudprovider
# gazelle:exclude pkg/util/kubernetes/clusterinfo
# gazelle:exclude pkg/util/kubernetes/clustername
# gazelle:exclude pkg/util/kubernetes/hostinfo
# gazelle:exclude pkg/util/kubernetes/kubelet
# gazelle:exclude pkg/util/port
# gazelle:exclude pkg/util/profiling
# gazelle:exclude pkg/util/tags
# gazelle:exclude pkg/util/tmplvar
# gazelle:exclude pkg/windowsdriver/ddinjector
# gazelle:exclude pkg/windowsdriver/include
# gazelle:exclude pkg/windowsdriver/procmon
# gazelle:exclude tasks
# gazelle:exclude test/benchmarks
# gazelle:exclude test/e2e-framework/common/config
# gazelle:exclude test/e2e-framework/common/utils
# gazelle:exclude test/e2e-framework/components/activedirectory
# gazelle:exclude test/e2e-framework/components/command
# gazelle:exclude test/e2e-framework/components/datadog/agent/helm
# gazelle:exclude test/e2e-framework/components/datadog/agentparams/msi
# gazelle:exclude test/e2e-framework/components/datadog/agentwithoperatorparams
# gazelle:exclude test/e2e-framework/components/datadog/apps
# gazelle:exclude test/e2e-framework/components/datadog/csi-driver
# gazelle:exclude test/e2e-framework/components/datadog/dockeragentparams
# gazelle:exclude test/e2e-framework/components/datadog/dogstatsd-standalone
# gazelle:exclude test/e2e-framework/components/datadog/fakeintake
# gazelle:exclude test/e2e-framework/components/datadog/kubernetesagentparams
# gazelle:exclude test/e2e-framework/components/datadog/operator
# gazelle:exclude test/e2e-framework/components/datadog/operatorparams
# gazelle:exclude test/e2e-framework/components/datadog/otel-standalone
# gazelle:exclude test/e2e-framework/components/datadog/updater
# gazelle:exclude test/e2e-framework/components/docker
# gazelle:exclude test/e2e-framework/components/ecs
# gazelle:exclude test/e2e-framework/components/iis
# gazelle:exclude test/e2e-framework/components/kubernetes
# gazelle:exclude test/e2e-framework/components/os
# gazelle:exclude test/e2e-framework/components/remote
# gazelle:exclude test/e2e-framework/components/windows/defender
# gazelle:exclude test/e2e-framework/components/windows/fipsmode
# gazelle:exclude test/e2e-framework/components/windows/testsigning
# gazelle:exclude test/e2e-framework/dist
# gazelle:exclude test/e2e-framework/registry
# gazelle:exclude test/e2e-framework/resources
# gazelle:exclude test/e2e-framework/run
# gazelle:exclude test/e2e-framework/scenarios/aws/ec2
# gazelle:exclude test/e2e-framework/scenarios/aws/ec2docker
# gazelle:exclude test/e2e-framework/scenarios/aws/ecs
# gazelle:exclude test/e2e-framework/scenarios/aws/eks
# gazelle:exclude test/e2e-framework/scenarios/aws/fakeintake
# gazelle:exclude test/e2e-framework/scenarios/aws/gensim-eks
# gazelle:exclude test/e2e-framework/scenarios/aws/installer
# gazelle:exclude test/e2e-framework/scenarios/aws/kindvm
# gazelle:exclude test/e2e-framework/scenarios/aws/microVMs/config
# gazelle:exclude test/e2e-framework/scenarios/aws/microVMs/microvms/files
# gazelle:exclude test/e2e-framework/scenarios/aws/microVMs/microvms/resources
# gazelle:exclude test/e2e-framework/scenarios/aws/test
# gazelle:exclude test/e2e-framework/scenarios/azure
# gazelle:exclude test/e2e-framework/scenarios/gcp
# gazelle:exclude test/e2e-framework/scenarios/hyperv
# gazelle:exclude test/e2e-framework/scenarios/local
# gazelle:exclude test/e2e-framework/scenarios/outputs
# gazelle:exclude test/e2e-framework/testing/components
# gazelle:exclude test/e2e-framework/testing/e2e
# gazelle:exclude test/e2e-framework/testing/environments
# gazelle:exclude test/e2e-framework/testing/provisioners
# gazelle:exclude test/e2e-framework/testing/runner
# gazelle:exclude test/e2e-framework/testing/utils/e2e/client/agentclientparams
# gazelle:exclude test/e2e-framework/testing/utils/infra
# gazelle:exclude test/fakeintake/aggregator
# gazelle:exclude test/fakeintake/cmd
# gazelle:exclude test/fakeintake/docs
# gazelle:exclude test/fakeintake/server
# gazelle:exclude test/files
# gazelle:exclude test/integration
# gazelle:exclude test/new-e2e/examples
# gazelle:exclude test/new-e2e/scenarios
# gazelle:exclude test/new-e2e/system-probe/config
# gazelle:exclude test/new-e2e/system-probe/test
# gazelle:exclude test/new-e2e/system-probe/test-json-review
# gazelle:exclude test/new-e2e/system-probe/vm-metrics
# gazelle:exclude test/new-e2e/test-infra-definition
# gazelle:exclude test/new-e2e/tests/agent-configuration
# gazelle:exclude test/new-e2e/tests/agent-devx
# gazelle:exclude test/new-e2e/tests/agent-health
# gazelle:exclude test/new-e2e/tests/agent-log-pipelines
# gazelle:exclude test/new-e2e/tests/agent-metric-pipelines
# gazelle:exclude test/new-e2e/tests/agent-platform/common
# gazelle:exclude test/new-e2e/tests/agent-platform/platforms
# gazelle:exclude test/new-e2e/tests/agent-platform/tests
# gazelle:exclude test/new-e2e/tests/agent-runtimes
# gazelle:exclude test/new-e2e/tests/agent-subcommands/check
# gazelle:exclude test/new-e2e/tests/agent-subcommands/dogstatsdreplay
# gazelle:exclude test/new-e2e/tests/agent-subcommands/flare
# gazelle:exclude test/new-e2e/tests/agent-subcommands/status
# gazelle:exclude test/new-e2e/tests/apm
# gazelle:exclude test/new-e2e/tests/autoscaling/spot
# gazelle:exclude test/new-e2e/tests/containers
# gazelle:exclude test/new-e2e/tests/cspm
# gazelle:exclude test/new-e2e/tests/cws/api
# gazelle:exclude test/new-e2e/tests/discovery
# gazelle:exclude test/new-e2e/tests/fips-compliance
# gazelle:exclude test/new-e2e/tests/fleet
# gazelle:exclude test/new-e2e/tests/gpu
# gazelle:exclude test/new-e2e/tests/ha-agent
# gazelle:exclude test/new-e2e/tests/installer/host
# gazelle:exclude test/new-e2e/tests/installer/script
# gazelle:exclude test/new-e2e/tests/installer/unix
# gazelle:exclude test/new-e2e/tests/installer/windows/fixtures
# gazelle:exclude test/new-e2e/tests/installer/windows/remote-host-assertions
# gazelle:exclude test/new-e2e/tests/installer/windows/resources
# gazelle:exclude test/new-e2e/tests/installer/windows/suite-assertions
# gazelle:exclude test/new-e2e/tests/language-detection
# gazelle:exclude test/new-e2e/tests/ndm
# gazelle:exclude test/new-e2e/tests/netpath
# gazelle:exclude test/new-e2e/tests/npm
# gazelle:exclude test/new-e2e/tests/orchestrator
# gazelle:exclude test/new-e2e/tests/otel
# gazelle:exclude test/new-e2e/tests/privateactionrunner
# gazelle:exclude test/new-e2e/tests/process
# gazelle:exclude test/new-e2e/tests/remote-config
# gazelle:exclude test/new-e2e/tests/sbom
# gazelle:exclude test/new-e2e/tests/security-agent-functional
# gazelle:exclude test/new-e2e/tests/ssi
# gazelle:exclude test/new-e2e/tests/ssi-gradual-rollout
# gazelle:exclude test/new-e2e/tests/sysprobe-functional
# gazelle:exclude test/new-e2e/tests/usm
# gazelle:exclude test/new-e2e/tests/windows/common/fixtures
# gazelle:exclude test/new-e2e/tests/windows/components
# gazelle:exclude test/new-e2e/tests/windows/domain-test
# gazelle:exclude test/new-e2e/tests/windows/fips-test
# gazelle:exclude test/new-e2e/tests/windows/install-test
# gazelle:exclude test/new-e2e/tests/windows/scripts
# gazelle:exclude test/new-e2e/tests/windows/service-test
# gazelle:exclude test/new-e2e/tests/windows/windows-certificate
# gazelle:exclude test/regression
# gazelle:exclude test/required_files
# gazelle:exclude test/static
# gazelle:exclude tools/NamedPipeCmd
# gazelle:exclude tools/agent_QA
# gazelle:exclude tools/ci
# gazelle:exclude tools/ebpf
# gazelle:exclude tools/gdb
# gazelle:exclude tools/go-update
# gazelle:exclude tools/host-profiler
# gazelle:exclude tools/retry_file_dump
# gazelle:exclude tools/windows
# gazelle:exclude vendor
# Proto definitions under pkg/proto/datadog/ use pre-generated Go code checked
# into pkg/proto/pbgo/. Gazelle's proto mode is disabled because multiple proto
# directories share the same go_package ("pkg/proto/pbgo/core"), making
# per-directory go_proto_library targets impossible. Additionally, some directories
# (remoteagent, privateactionrunner) contain multiple proto packages which
# gazelle cannot handle at all.
# Vendored proto definitions used only for protoc code-gen, not Bazel builds.

# All custom build tags from tasks/build_tags.py ALL_TAGS, plus "test".
# "test" is included so Gazelle analyzes test-only sources and generates their
# deps. The go_build_tags Gazelle extension removes those files from go_library
# and moves them into go_test targets; their deps remain in go_library (harmless
# extra) and are accessible to go_test via embedding.
_GAZELLE_BUILD_TAGS = [
    "bundle_installer",
    "cel",
    "clusterchecks",
    "consul",
    "containerd",
    "cri",
    "crio",
    "cws_instrumentation_injector_only",
    "datadog.no_waf",
    "docker",
    "e2eunit",
    "ec2",
    "etcd",
    "fargateprocess",
    "goexperiment.systemcrypto",
    "grpcnotrace",
    "jetson",
    "jmx",
    "kubeapiserver",
    "kubelet",
    "linux_bpf",
    "ncm",
    "netcgo",
    "netgo",
    "no_dynamic_plugins",
    "npm",
    "nvml",
    "oracle",
    "orchestrator",
    "osusergo",
    "otlp",
    "podman",
    "private_runner_experimental",
    "python",
    "requirefips",
    "retrynotrace",
    "seclmax",
    "serverless",
    "sharedlibrarycheck",
    "systemd",
    "systemprobechecks",
    "test",
    "trivy",
    "trivy_no_javadb",
    "wmi",
    "zk",
    "zlib",
    "zstd",
]

# gazelle:resolve go github.com/DataDog/datadog-agent/pkg/proto/pbgo/trace/idx //pkg/proto/pbgo/trace/idx
gazelle(
    name = "gazelle",
    build_tags = _GAZELLE_BUILD_TAGS,
    external = "static",  # don't use the network: https://github.com/bazel-contrib/bazel-gazelle/issues/1385
    extra_args = [
        "-build_file_name=BUILD.bazel",  # avoid BUILD/build mess: https://github.com/docker/desktop-feedback/issues/251
        "-strict",  # don't swallow syntax errors or unknown directives
    ],
    gazelle = ":gazelle_binary",
    prefix = "github.com/DataDog/datadog-agent",
)

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + [
        "//bazel/rules/cws_codegen:gazelle_extension",
        "//bazel/rules/go_build_tags:gazelle_extension",
        "//bazel/rules/go_stringer:gazelle_extension",
        "//bazel/rules/write_pb_go:gazelle_extension",
    ],
)

# bazel run //:go -- ...
alias(
    name = "go",
    actual = "@go_fast",  #TODO(agent-build): move back to "@rules_go//go" when golang/go#77889 is addressed
)

# bazel run //:go_mod_tidy_all -- -x
alias(
    name = "go_mod_tidy_all",
    actual = "//bazel/tools:go_mod_tidy_all",
)

run_binary(
    name = "gen_go_work",
    srcs = [
        ":go.work",
        ":modules.yml",
    ],
    outs = ["go.work.new"],
    args = [
        "--path",
        "$(location go.work)",
        "--modules-file",
        "$(location modules.yml)",
        "--output",
        "$(location go.work.new)",
    ],
    tool = "//internal/tools/worksynchronizer",
)

# bazel run //:write_go_work
write_source_file(
    name = "write_go_work",
    in_file = ":gen_go_work",
    out_file = "go.work",
)

filegroup(
    name = "python_version",
    srcs = [".python-version"],
)

config_setting(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

# The location that the bulk of the agent gets installed to. Like most *nix tools, this
# is in /opt. That will hold shared libraries, and python packages.  It is not the
# complete installation, becuase some things go to /etc or /usr.
#
# Migration to bazel warning:
# The goal we are aiming for is that output base is always passed to build
# scripts and we install artifacts to output_base + install_dir. Unfortunately,
# many existing scripts only use install_dir, without regard to a a base. They
# put etc files under opt/datadog, then move them to /etc in the final part of the
# build.
# TODO: We need to learn how people expect to use install dir to create custom
# builds for local testing that do not wipe out their local installation.
string_flag(
    name = "install_dir",
    build_setting_default = "/opt/datadog-agent",
    make_variable = "INSTALL_DIR",
)

# Configuration value to determine if we are using the standard install path.
# This can be used to detect custom builds, where we might not to create some pieces.
# Currently this is used only for installer symlinks. It is likely that we should not
# continue to do that. My hunch is that it was only done to prevent disk stomping in
# developer builds.
config_setting(
    name = "is_standard_install",
    flag_values = {
        "//:install_dir": "/opt/datadog-agent",
    },
)

# This seems to be the base of where to write config files during
# the build. That is, if we were creating /etc/foo, it would be
# the path prepended to /etc to get a safe place to write.
# We can set this from the omnibus variable OUTPUT_CONFIG_DIR.
# But, it seems to be empty in CI runs, so we end up writing to /.
# The default is /tmp so we don't shoot our feet off in local testing.
# If we end up keeping this flag, let's give it a better name and
# git it a better value.
string_flag(
    name = "output_config_dir",
    build_setting_default = "/tmp",
    make_variable = "OUTPUT_CONFIG_DIR",
)

# Use this configuration setting to select options that should be applied for
# to a non-developer version of the product. It does not mean this is a delivery
# pipeline. This is set for most CI runs, so that size and performance tests
# are accurate.
bool_flag(
    name = "release",
    build_setting_default = False,
)

config_setting(
    name = "is_release",
    flag_values = {
        "//:release": "True",
    },
)
